[build-system]

requires = ["setuptools",
            "setuptools_scm",
            "wheel"]

build-backend = 'setuptools.build_meta'

requires-python = ">=3.12"

depdendencies = [
  "astropy>=6.1",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pyxsim>=4.4",
  "scipy>=1.11",
  "yt>=4.4",
]

optional-dependencies.tests = [
  "nox[uv]>=2025.5.1",
  "pytest>=8.4.1",
]